Make necessary changes to compile with MSVC++

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,18 @@ obj-test/CMakeFiles
 obj-test/CMakeCache.txt
 obj-test/cmake_install.cmake
 obj-test/obj-test
+*.user
+*.vcxproj
+*.filters
+*.db
+.vs/LIBOBJ/v15/.suo
+*.sln
+*.ipch
+*.tlog
+*.pdb
+*.exe
+*.ilk
+obj-test/Debug/.vs/obj-test/v15/.suo
+*.log
+*.lib
+*.obj
