Fix up linking issues on OSX; Use shared-object library

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,11 @@
-cmake_minimum_required (VERSION 2.8.11)
+cmake_minimum_required (VERSION 3.0)
 project (LIBOBJ)
 add_subdirectory (obj)
 add_subdirectory (obj-test)
 if(MSVC)
 set_property(TARGET obj PROPERTY CXX_STANDARD 11)
+set_property(TARGET obj-test PROPERTY CXX_STANDARD 11)
 else()
 set_property(TARGET obj PROPERTY C_STANDARD 99)
+set_property(TARGET obj-test PROPERTY C_STANDARD 99)
 endif()
