Clean up CMake files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,10 +2,17 @@ cmake_minimum_required (VERSION 3.0)
 project (LIBOBJ)
 add_subdirectory (obj)
 add_subdirectory (obj-test)
+
 if(MSVC)
-set_property(TARGET obj PROPERTY CXX_STANDARD 11)
-set_property(TARGET obj-test PROPERTY CXX_STANDARD 11)
+    if(NOT CPP)
+        set(CPP 11)
+    endif()
+endif()
+
+if(CPP)
+    set_property(TARGET obj PROPERTY CXX_STANDARD ${CPP})
+    set_property(TARGET obj-test PROPERTY CXX_STANDARD ${CPP})
 else()
-set_property(TARGET obj PROPERTY C_STANDARD 99)
-set_property(TARGET obj-test PROPERTY C_STANDARD 99)
+    set_property(TARGET obj PROPERTY C_STANDARD 99)
+    set_property(TARGET obj-test PROPERTY C_STANDARD 99)
 endif()
