--- a/obj-test/CMakeLists.txt
+++ b/obj-test/CMakeLists.txt
@@ -9,4 +9,4 @@ if(MSVC)
     add_definitions(-DNOMINMAX -D_CRT_SECURE_NO_WARNINGS)
 endif()
 
-target_link_libraries (obj-test LINK_PUBLIC obj)
+target_link_libraries (obj-test LINK_PUBLIC obj-ui)
