--- a/obj-ui/CMakeLists.txt
+++ b/obj-ui/CMakeLists.txt
@@ -10,5 +10,5 @@ if(MSVC)
 endif()
 
 set_property(TARGET obj-ui PROPERTY POSITION_INDEPENDENT_CODE ON)
-target_include_directories (obj-ui PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
+target_include_directories (obj-ui PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/..)
 target_link_libraries (obj-ui LINK_PUBLIC obj-math m glfw GLESv2)
