--- a/obj-math/CMakeLists.txt
+++ b/obj-math/CMakeLists.txt
@@ -10,5 +10,5 @@ if(MSVC)
 endif()
 
 set_property(TARGET obj-math PROPERTY POSITION_INDEPENDENT_CODE ON)
-target_include_directories (obj-math PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
+target_include_directories (obj-math PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/..)
 target_link_libraries (obj-math LINK_PUBLIC obj m)
