--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,10 +2,11 @@ cmake_minimum_required (VERSION 3.0)
 project (LIBOBJ)
 add_subdirectory (obj)
 add_subdirectory (obj-math)
-add_subdirectory (obj-poly2tri)
-add_subdirectory (obj-gfx)
-add_subdirectory (obj-ui)
-add_subdirectory (obj-test)
+add_subdirectory (obj-header)
+#add_subdirectory (obj-poly2tri)
+#add_subdirectory (obj-gfx)
+#add_subdirectory (obj-ui)
+#add_subdirectory (obj-test)
 
 if(MSVC)
     if(NOT CPP)
@@ -18,5 +19,5 @@ if(CPP)
     set_property(TARGET obj-test PROPERTY CXX_STANDARD ${CPP})
 else()
     set_property(TARGET obj PROPERTY C_STANDARD 99)
-    set_property(TARGET obj-test PROPERTY C_STANDARD 99)
+#    set_property(TARGET obj-test PROPERTY C_STANDARD 99)
 endif()
