Add Pairs_from_string functionality; Add property meta (Pairs with string key and inferred object value) to properties when specified

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,7 @@ add_subdirectory (obj-header)
 #add_subdirectory (obj-poly2tri)
 #add_subdirectory (obj-gfx)
 #add_subdirectory (obj-ui)
-#add_subdirectory (obj-test)
+add_subdirectory (obj-test)
 
 if(MSVC)
     if(NOT CPP)
@@ -19,5 +19,5 @@ if(CPP)
     set_property(TARGET obj-test PROPERTY CXX_STANDARD ${CPP})
 else()
     set_property(TARGET obj PROPERTY C_STANDARD 99)
-#    set_property(TARGET obj-test PROPERTY C_STANDARD 99)
+    set_property(TARGET obj-test PROPERTY C_STANDARD 99)
 endif()
