Continue port of gfx

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,13 @@
 cmake_minimum_required (VERSION 3.0)
 project (LIBOBJ)
+
+set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wfatal-errors")
+
 add_subdirectory (obj)
 add_subdirectory (obj-math)
 add_subdirectory (obj-header)
-#add_subdirectory (obj-poly2tri)
-#add_subdirectory (obj-gfx)
+add_subdirectory (obj-poly2tri)
+add_subdirectory (obj-gfx)
 #add_subdirectory (obj-ui)
 add_subdirectory (obj-test)
 
