--- a/obj-gfx/CMakeLists.txt
+++ b/obj-gfx/CMakeLists.txt
@@ -1,6 +1,9 @@
 file(GLOB src "*.c")
 add_library (obj-gfx SHARED ${src})
 
+find_package(Freetype REQUIRED)
+include_directories(${FREETYPE_INCLUDE_DIRS})
+
 if(CPP)
     set_source_files_properties (${src} PROPERTIES LANGUAGE CXX)
 endif()
@@ -11,4 +14,4 @@ endif()
 
 set_property(TARGET obj-gfx PROPERTY POSITION_INDEPENDENT_CODE ON)
 target_include_directories (obj-gfx PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/..)
-target_link_libraries (obj-gfx LINK_PUBLIC obj-math m glfw GLESv2)
+target_link_libraries (obj-gfx LINK_PUBLIC obj-math m glfw GLESv2 freetype2)
