Work on Font port (Gfx); consider changes to Vec to support more than one primitive type

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,8 +6,8 @@ set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wfatal-errors")
 add_subdirectory (obj)
 add_subdirectory (obj-math)
 add_subdirectory (obj-header)
-add_subdirectory (obj-poly2tri)
-add_subdirectory (obj-gfx)
+#add_subdirectory (obj-poly2tri)
+#add_subdirectory (obj-gfx)
 #add_subdirectory (obj-ui)
 add_subdirectory (obj-test)
 
