--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@ obj-test/CMakeFiles
 obj-test/CMakeCache.txt
 obj-test/cmake_install.cmake
 obj-test/obj-test
+**/build
 *.user
 *.vcxproj
 *.filters
