--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,13 +3,35 @@ project (LIBOBJ)
 
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wfatal-errors")
 
-add_subdirectory (obj)
-add_subdirectory (obj-math)
-add_subdirectory (obj-header)
-#add_subdirectory (obj-poly2tri)
-#add_subdirectory (obj-gfx)
-#add_subdirectory (obj-ui)
-add_subdirectory (obj-test)
+set(include_dirs "")
+set(mods "")
+
+macro(mod module_name)
+    file(GLOB c_files "${module_name}/*.c")
+    file(GLOB h_files "${module_name}/*.h")
+    file(COPY ${c_files} DESTINATION ${module_name}/build/${module_name})
+    file(COPY ${h_files} DESTINATION ${module_name}/build/${module_name})
+    file(GLOB h_files_build "${module_name}/build/${module_name}/*.h")
+    message("add dir: " ${module_name})
+    add_subdirectory(${module_name})
+    foreach(h_file ${h_files_build})
+        add_custom_command(TARGET ${module_name} COMMAND obj-header/obj-header ${h_file} ${h_file})
+    endforeach()
+    list(APPEND include_dirs "${CMAKE_CURRENT_SOURCE_DIR}/${module_name}/build")
+    list(APPEND mods ${module_name})
+endmacro()
+
+mod(obj)
+mod(obj-math)
+add_subdirectory(obj-header)
+#mod(obj-poly2tri)
+#mod(obj-gfx)
+#mod(obj-ui)
+mod(obj-test)
+
+foreach(module ${mods})
+    target_include_directories(${module} PUBLIC ${include_dirs})
+endforeach()
 
 if(MSVC)
     if(NOT CPP)
