Finish up forward keyword implementation

--- a/obj-header/CMakeLists.txt
+++ b/obj-header/CMakeLists.txt
@@ -1,4 +1,4 @@
-add_executable (obj-header header.c)
+add_executable (obj-header header.c llist.c)
 
 if(CPP)
     set_source_files_properties (header.c PROPERTIES LANGUAGE CXX)
