convert headers back in obj; branch off conversion code for cx conversion

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,29 +2,14 @@ cmake_minimum_required (VERSION 3.0)
 project (LIBOBJ)
 
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wfatal-errors")
-set(include_dirs "")
-set(mods "")
 
-macro(mod module_name)
-    add_subdirectory(${module_name})
-    list(APPEND include_dirs "${CMAKE_CURRENT_SOURCE_DIR}/${module_name}/build")
-    list(APPEND mods ${module_name})
-endmacro()
-
-# get header parsing working
-
-add_subdirectory(obj-header)
-
-mod(obj)
-mod(obj-math)
-#mod(obj-poly2tri)
-#mod(obj-gfx)
-#mod(obj-ui)
-mod(obj-test)
-
-foreach(module ${mods})
-    target_include_directories(${module} PUBLIC ${include_dirs})
-endforeach()
+add_subdirectory (obj)
+add_subdirectory (obj-math)
+#add_subdirectory (obj-header)
+#add_subdirectory (obj-poly2tri)
+#add_subdirectory (obj-gfx)
+#add_subdirectory (obj-ui)
+add_subdirectory (obj-test)
 
 if(MSVC)
     if(NOT CPP)
