--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required    (VERSION 2.8.12)
 enable_language           (ASM)
 project                   (silver)
-file                      (GLOB src "${CMAKE_CURRENT_SOURCE_DIR}/silver/a.c")
+file                      (GLOB src "${CMAKE_CURRENT_SOURCE_DIR}/silver/A.c" "${CMAKE_CURRENT_SOURCE_DIR}/silver/silver.c")
 add_compile_options       (-Wno-write-strings -Wno-incompatible-pointer-types -fPIE)
 #add_compile_options      (-fsanitize=address -fno-omit-frame-pointer -g)
 #add_link_options         (-fsanitize=address)
@@ -9,4 +9,4 @@ set(CMAKE_C_STANDARD      11)
 set(CMAKE_C_COMPILER      gcc)
 add_executable            (silver ${src})
 target_link_libraries     (silver ffi)
-target_include_directories(silver PRIVATE .)
+target_include_directories(silver PRIVATE . ./silver)
