--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,10 @@ project                   (silver)
 file                      (GLOB src "${CMAKE_CURRENT_SOURCE_DIR}/silver/silver44.c")
 add_compile_options       (-Wno-write-strings -Wno-incompatible-pointer-types -Wfatal-errors -fPIC)
 add_compile_options       (-fsanitize=address -fno-omit-frame-pointer -g)
+if(APPLE)
+    add_compile_options(-I/usr/local/include/)
+    link_directories(/usr/local/lib/)
+endif()
 add_link_options          (-fsanitize=address)
 set(CMAKE_C_STANDARD      11)
 set(CMAKE_C_COMPILER      gcc)
