--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,14 +1,31 @@
 cmake_minimum_required    (VERSION 2.8.12)
 enable_language           (ASM)
 project                   (silver)
-file                      (GLOB src "${CMAKE_CURRENT_SOURCE_DIR}/silver/silver44.c")
+
+#set(CMAKE_PREFIX_PATH     "/usr/lib/llvm-14/lib/cmake/llvm" ${CMAKE_PREFIX_PATH})
+set(CMAKE_INSTALL_PREFIX  ${CMAKE_BINARY_DIR}/install)
+
+# effective clang usage:
+# clang++ -std=c++17 -I `llvm-config-14 --cxxflags --ldflags --libs core executionengine mcjit native`
+
+add_custom_target         (script COMMAND ${CMAKE_COMMAND} -E env bash ${CMAKE_SOURCE_DIR}/deps.sh WORKING_DIRECTORY ${CMAKE_SOURCE_DIR})
+find_package              (LLVM 14 REQUIRED CONFIG)
+set                       (LLVM_VERSION "14")
+include_directories       (${LLVM_INCLUDE_DIRS} /usr/include/llvm-14) # /usr/lib/gcc/x86_64-linux-gnu/11/include
+link_directories          (${LLVM_LIBRARY_DIRS} /usr/lib/llvm-14/lib)
+link_directories          (${CMAKE_INSTALL_PREFIX}/lib)
+file                      (GLOB src                     "${CMAKE_CURRENT_SOURCE_DIR}/silver/silver44.c" "${CMAKE_CURRENT_SOURCE_DIR}/silver/silver44-IR.cc")
+add_compile_options       (-fno-exceptions -D_GNU_SOURCE -D__STDC_CONSTANT_MACROS -D__STDC_FORMAT_MACROS -D__STDC_LIMIT_MACROS)
 add_compile_options       (-Wno-write-strings -Wno-incompatible-pointer-types -Wfatal-errors -fPIC)
-add_compile_options       (-fsanitize=address -fno-omit-frame-pointer -g)
-add_compile_options(-I${CMAKE_CURRENT_BINARY_DIR}/install/include)
-link_directories(-I${CMAKE_CURRENT_BINARY_DIR}/install/lib)
-add_link_options          (-fsanitize=address)
-set(CMAKE_C_STANDARD      11)
-set(CMAKE_C_COMPILER      gcc)
-add_executable            (silver ${src})
-target_link_libraries     (silver A)
-target_include_directories(silver PRIVATE . ./silver ../A)
+#add_compile_options      (-fsanitize=address -fno-omit-frame-pointer -g)
+#add_link_options         (-fsanitize=address)
+add_compile_options       (-I${CMAKE_INSTALL_PREFIX}/include)
+set                       (CMAKE_C_STANDARD             11)
+set                       (CMAKE_CXX_STANDARD           17)
+set                       (CMAKE_CXX_STANDARD_REQUIRED  ON)
+set                       (CMAKE_C_COMPILER             gcc)
+set                       (CMAKE_CXX_COMPILER           clang++-14)
+add_executable            (silver                       ${src})
+add_dependencies          (silver                       script)
+target_link_libraries     (silver                       A LLVM-14)
+target_include_directories(silver                       PRIVATE . ./silver)
