--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,14 +17,14 @@ link_directories          (${LLVM_LIBRARY_DIRS} /usr/lib/llvm-14/lib)
 link_directories          (${CMAKE_INSTALL_PREFIX}/lib)
 file                      (GLOB src                     "${CMAKE_CURRENT_SOURCE_DIR}/silver/*.c")
 add_compile_options       (-fno-exceptions -D_GNU_SOURCE -D__STDC_CONSTANT_MACROS -D__STDC_FORMAT_MACROS -D__STDC_LIMIT_MACROS)
-add_compile_options       (-Wno-write-strings -Wno-deprecated-declarations -Wno-discarded-qualifiers -Wno-incompatible-pointer-types -Wfatal-errors -fPIC)
+add_compile_options       (-Wno-write-strings -Wno-deprecated-declarations -Wno-incompatible-pointer-types -Wfatal-errors -fPIC)
 #add_compile_options      (-fsanitize=address -fno-omit-frame-pointer -g)
 #add_link_options         (-fsanitize=address)
 add_compile_options       (-I${CMAKE_INSTALL_PREFIX}/include)
 set                       (CMAKE_C_STANDARD             11)
 set                       (CMAKE_CXX_STANDARD           17)
 set                       (CMAKE_CXX_STANDARD_REQUIRED  ON)
-set                       (CMAKE_C_COMPILER             gcc)
+set                       (CMAKE_C_COMPILER             clang)
 set                       (CMAKE_CXX_COMPILER           clang++-14)
 add_executable            (silver                       ${src})
 add_dependencies          (silver                       script)
