--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,8 +35,8 @@ add_compile_options       (-I${CMAKE_INSTALL_PREFIX}/include)
 set                       (CMAKE_C_STANDARD             11)
 set                       (CMAKE_CXX_STANDARD           17)
 set                       (CMAKE_CXX_STANDARD_REQUIRED  ON)
-set                       (CMAKE_C_COMPILER             clang-18)
-set                       (CMAKE_CXX_COMPILER           clang++-18)
+set                       (CMAKE_C_COMPILER             gcc)
+set                       (CMAKE_CXX_COMPILER           g++)
 add_executable            (silver                       ${src})
 add_dependencies          (silver                       script)
 target_link_libraries     (silver                       A LLVM-14 clang-14)
