--- a/.gitignore
+++ b/.gitignore
@@ -1,37 +1,5 @@
-.vscode
-Makefile
-cmake_install.cmake
-CMakeFiles
-CMakeCache.txt
-**/build
-**/module.c
-**/module.h
-**/*.dSYM
-*.user
-*.vcxproj
-*.filters
-testmod/testmod
-obj-test/obj-test
+.DS_Store
+build
+build-*
 silver-build
-*.o
-*.ll
-*.bc
-*.rmeta
-*.db
-.vs/LIBOBJ/v15/.suo
-*.sln
-*.ipch
-*.tlog
-*.pdb
-*.exe
-*.ilk
-Debug/.vs/obj-test/v15/.suo
-*.log
-*.lib
-*.obj
-*.dylib
-*.so
-deps/*
-install
-checkouts
-
+silver-debug
