--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,5 +2,5 @@ cmake_minimum_required    (VERSION 2.8.12)
 enable_language           (ASM)
 project                   (silver)
 set(app TRUE)
-include                   (../A/cmake)
+include                   (../A/A.cmake)
 target_link_libraries     (silver ${L}/libA.so ${L}/libether.so)
