--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ enable_language           (ASM)
 project                   (silver)
 set(app TRUE)
 include                   (../A/A.cmake)
-target_link_libraries     (silver ${L}/libA.so ${L}/libether.so)
+target_link_libraries     (silver ${L}/libA.so ${L}/libether.so ${L}/libz.a ${L}/libglfw3.a m)
