reshuffle silver about, merge in A-type, tapestry -> silver-import;  since must host its own import and basic build system to get llvm and core dependencies working (which is a bit more now that we have combined projects); its useful to describe a deps process that lets one append as many .sh deps

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,17 @@
 .DS_Store
 release
 debug
-import
+.DS_Store
+bin
+lib
+tokens
+checkout
+libexec
+*.o
+include/*
+!include/A
+!include/A-*
+!include/import.h
+!include/import
+!include/import-*
+share/*
