improve object model by consolidating all utility functionality into A-type, thus enumerable from silver without having to parse any A-type header (which Clang absolutely cannot do!)

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -138,7 +138,7 @@
             "type":       "lldb",
             "request":    "launch",
             "program":    "/src/silver/bin/silver",
-            "args":     [ "/src/silver/silver88.sf" ],
+            "args":     [ "--source", "/src/silver/silver88.sf" ],
             "cwd":        "/src/silver/share/silver",
             "env":      { "VERBOSE": "1", "CC": "clang" }
         },
