--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,10 +2,17 @@
 	"version": "2.0.0",
 	"tasks": [
         {
-            "label": "build-silver",
+            "label": "bootstrap",
+            "command": "${workspaceFolder}/bootstrap.bat",
+    		"options": {
+                "cwd": "${workspaceFolder}/debug"
+            }
+        },
+        {
+            "label": "build-silver-ninja",
             "type": "shell",
 			"options": {
-                "cwd": "${workspaceFolder}/../silver"
+                "cwd": "${workspaceFolder}/../silver/debug"
             },
             "group": {
                 "kind": "build",
@@ -19,6 +26,8 @@
             },
 			"isBackground": false,
 			"problemMatcher": ["$gcc"],
+            "dependsOn": "bootstrap",
+            "command": "${workspaceFolder}/bin/ninja.exe",
             "osx": {
                 "command": "make"
             },
