restructure file-system for sdk scheme

--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,11 @@
 .DS_Store
 release
 debug
-.DS_Store
-bin
-lib
-etc
-tokens
 checkout
-libexec
-*.o
-include/*
-!include/A
-!include/A-*
-!include/import.h
-!include/import
-!include/import-*
-share/*
-build/*
+sdk
+build
 .chatgpt
 .claude
 .gemini
 *.pyc
+*.o
