--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -27,9 +27,9 @@
             },
 			"isBackground": false,
 			"problemMatcher": ["$gcc"],
-            "command": "${workspaceFolder}/bin/ninja",
-            "args": ["-C", "debug", "-v"],
-            "env": { "VERBOSE": "1", "CC": "clang", "IMPORT": "/src/silver" }
+            "command": "${workspaceFolder}/sdk/native/bin/ninja",
+            "args": ["-C", "sdk/native/debug", "-v"],
+            "env": { "VERBOSE": "1", "CC": "clang", "IMPORT": "/src/silver/sdk/native" }
         },
         {
             "label": "build-hyperspace",
