basic A-type enhacements for fp16 and bf16 formats -- register as real primitives so silver may use them.

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -28,7 +28,7 @@
 			"isBackground": false,
 			"problemMatcher": ["$gcc"],
             "command": "${workspaceFolder}/sdk/native/bin/ninja",
-            "args": ["-C", "sdk/native/debug", "-v"],
+            "args": ["-C", "sdk/native/debug", "-v", "-f", "silver.ninja"],
             "env": { "VERBOSE": "1", "CC": "clang", "IMPORT": "/src/silver/sdk/native" }
         },
         {
