add header emission for use in .c ... we will still need to generate all of the method invocations, still.  however its in one header and thus a bit simplified include-wise

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -144,7 +144,8 @@
             "env":      {
                 "VERBOSE": "1",
                 "LD_LIBRARY_PATH":"/src/silver/sdk/native/lib",
-                "IMPORT":  "/src/silver/sdk/native"
+                "IMPORT":  "/src/silver/sdk/native",
+                "ASAN_OPTIONS": "detect_leaks=0"
             }
         },
         {
