--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -149,6 +149,20 @@
             }
         },
         {
+            "name":       "run-test",
+            "type":       "lldb",
+            "request":    "launch",
+            "preLaunchTask": "build-silver-ninja",
+            "program":    "/src/silver/sdk/native/lib/test",
+            "cwd":        "/src/silver/sdk/native/lib",
+            "env":      {
+                "VERBOSE": "1",
+                "LD_LIBRARY_PATH":"/src/silver/sdk/native/lib",
+                "IMPORT":  "/src/silver/sdk/native",
+                "ASAN_OPTIONS": "detect_leaks=0"
+            }
+        },
+        {
             "name": "hyperspace-train",
             "type": "cppdbg",
             "request": "launch",
